colcon_ws/log/build_2022-09-10_04-36-21/dasc_robot/stdout_stderr.log
[ 12%] Built target dascBots
[35m[1mScanning dependencies of target joystick_controller[0m
[ 68%] Built target example_control_geometric_velocity
[ 68%] Built target example_control_geometric
[ 68%] Built target example_control_multi_rover
[ 68%] Built target example_control
[ 75%] Built target example_control_geometric_acceleration
[ 87%] [32mBuilding CXX object CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o[0m
[ 93%] Built target dasc_robot_lib
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In member function ‘void JoystickController::takeoff()’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:62:60: error: ‘target_’ was not declared in this scope; did you mean ‘target_pos’?
   62 |       quad->cmdWorldPosition(target_pos[0], target_pos[1], target_[pos][2], 0,0);
      |                                                            ^~~~~~~
      |                                                            target_pos
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:62:68: error: ‘pos’ was not declared in this scope; did you mean ‘pow’?
   62 |       quad->cmdWorldPosition(target_pos[0], target_pos[1], target_[pos][2], 0,0);
      |                                                                    ^~~
      |                                                                    pow
make[2]: *** [CMakeFiles/joystick_controller.dir/build.make:63: CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:308: CMakeFiles/joystick_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
